# odyssey-player-3d

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/agents/: ui-integration-tester.md  ui-tooling-runner.md
assets/: README.md
cmake/: FindImmersity.cmake
docs/: smoke-tests.md  test-corpus.md
docs/superpowers/plans/: 2026-04-19-odyssey-player-3d-mvp.md
src/: main.cpp
src/app/: AppShell.cpp  AppShell.h  D3D11Device.cpp  D3D11Device.h  FrameMailbox.h  ImmersityWeaver.cpp  ImmersityWeaver.h  Nv12ToRgba.cpp  Nv12ToRgba.h  PtsMath.h  VideoPipeline.cpp  VideoPipeline.h  Win32Window.cpp  Win32Window.h
tests/: FrameMailboxTests.cpp  PtsMathTests.cpp
tests/ui/: .env.example  .gitignore  README.md  computer_use_runner.py  requirements.txt
tests/ui/scenarios/: m2_video_playback.md
